--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <header>
         <div class="logo">
-            <a href="#"><img class="logo-img" src="img/white-Logo.svg" alt="Dani.H Logo"></a>
+            <a href="#"><img class="logo-img" src="img/white-Logo.png" alt="Dani.H Logo"></a>
             <p>Full stack web developer</p>
         </div>
         <nav class="nav-bar">
@@ -41,13 +41,13 @@
         <div class="hero-main">
             <div class="hero-text">
                 <div class="hero-heading">
-                    <h1>Danie.H</h1>
+                    <h1>Daniel.H</h1>
                     <span class="hero-span">Web developer</span>
                 </div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus quas, commoditempora.</p>
             </div>
             <div class="hero-img">
-                <img src="img/portrait.png" alt="Daniel Hen Portrait">
+                <img src="img/portrait.jpg" alt="Daniel Hen Portrait">
             </div>
         </div>
     </section>
