--- a/index.html
+++ b/index.html
@@ -36,91 +36,91 @@
             <a class="nav-link nav-contact-link" href="#section-contact">Contact</a>
         </nav>
     </header>
-
-    <section id="section-hero">
-        <div class="hero-main">
-            <div class="hero-text">
-                <div class="hero-heading">
-                    <h1>Daniel.H</h1>
-                    <h5>Web developer</h5>
+    <div class="all-content">
+        <section id="section-hero">
+            <div class="hero-main">
+                <div class="hero-text">
+                    <div class="hero-heading">
+                        <h1>Daniel.H</h1>
+                        <h5>Web developer</h5>
+                    </div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus quas, commoditempora.</p>
                 </div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus quas, commoditempora.</p>
-            </div>
-            <div class="hero-img">
-                <img src="img/portrait.jpg" alt="Daniel Hen Portrait">
-            </div>
-        </div>
-    </section>
-
-    <section id="section-contact">
-        <form class="hero-form" action="#">
-            <div class="hero-form-inputs">
-                <div class="hero-form-input">
-                    <label for="fullName">Full name:</label>
-                    <input id="fullName" type="text" name="fullName">
-                </div>
-                <div class="hero-form-input">
-                    <label for="email">Email:</label>
-                    <input id="fullName" type="email" name="email">
-                </div>
-                <div class="hero-form-input">
-                    <label for="phoneNumber">Phone Number:</label>
-                    <input id="phoneNumber" type="tel" name="phoneNumber">
+                <div class="hero-img">
+                    <img src="img/portrait.jpg" alt="Daniel Hen Portrait">
                 </div>
             </div>
-            <div class="form-btn">
-                <button type="submit">Contact Me</button>
-            </div>
-        </form>
-        <p class="contact-p">Leave your information and I will get back to you as soon as I can! 😃</p>
-    </section>
+        </section>
 
-    <section id="section-my-work">
-        <h2>My Work</h2>
-        <div class="acards">
-            <div class="acard card1">
-                <h4>company name</h4>
-                <p>website development</p>
-            </div>
-            <div class="acard card2">
-                <h4>company name</h4>
-                <p>website development</p>
-            </div>
-            <div class="acard card3">
-                <h4>company name</h4>
-                <p>website development</p>
-            </div>
-            <div class="acard card4">
-                <h4>company name</h4>
-                <p>website development</p>
-            </div>
-            <div class="acard card5">
-                <h4>company name</h4>
-                <p>website development</p>
-            </div>
-            <div class="acard card6">
-                <h4>company name</h4>
-                <p>website development</p>
-            </div>
-            <div class="acard card7">
-                <h4>company name</h4>
-                <p>website development</p>
-            </div>
-            <div class="acard card8">
-                <h4>company name</h4>
-                <p>website development</p>
-            </div>
-            <div class="acard card9">
-                <h4>company name</h4>
-                <p>website development</p>
-            </div>
-        </div>
-    </section>
+        <section id="section-contact">
+            <form class="hero-form" action="#">
+                <div class="hero-form-inputs">
+                    <div class="hero-form-input">
+                        <label for="fullName">Full name:</label>
+                        <input id="fullName" type="text" name="fullName">
+                    </div>
+                    <div class="hero-form-input">
+                        <label for="email">Email:</label>
+                        <input id="fullName" type="email" name="email">
+                    </div>
+                    <div class="hero-form-input">
+                        <label for="phoneNumber">Phone Number:</label>
+                        <input id="phoneNumber" type="tel" name="phoneNumber">
+                    </div>
+                </div>
+                <div class="form-btn">
+                    <button type="submit">Contact Me</button>
+                </div>
+            </form>
+            <p class="contact-p">Leave your information and I will get back to you as soon as I can! 😃</p>
+        </section>
 
-    <section id="section-about-me">
+        <section id="section-my-work">
+            <h2>My Work</h2>
+            <div class="acards">
+                <div class="acard card1">
+                    <h4>company name</h4>
+                    <p>website development</p>
+                </div>
+                <div class="acard card2">
+                    <h4>company name</h4>
+                    <p>website development</p>
+                </div>
+                <div class="acard card3">
+                    <h4>company name</h4>
+                    <p>website development</p>
+                </div>
+                <div class="acard card4">
+                    <h4>company name</h4>
+                    <p>website development</p>
+                </div>
+                <div class="acard card5">
+                    <h4>company name</h4>
+                    <p>website development</p>
+                </div>
+                <div class="acard card6">
+                    <h4>company name</h4>
+                    <p>website development</p>
+                </div>
+                <div class="acard card7">
+                    <h4>company name</h4>
+                    <p>website development</p>
+                </div>
+                <div class="acard card8">
+                    <h4>company name</h4>
+                    <p>website development</p>
+                </div>
+                <div class="acard card9">
+                    <h4>company name</h4>
+                    <p>website development</p>
+                </div>
+            </div>
+        </section>
 
-    </section>
+        <section id="section-about-me">
 
+        </section>
+    </div>
     <footer>
         <div class="footer-icons">
             <a
