add after to contact button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </section>
 
         <section id="section-contact">
-            <form class="hero-form" action="#">
+            <form class="hero-form" onsubmit="myFunction()">
                 <div class="hero-form-inputs">
                     <div class="hero-form-input">
                         <label for="fullName">Full name:</label>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="hero-form-input">
                         <label for="email">Email:</label>
-                        <input id="fullName" type="email" name="email">
+                        <input id="email" type="email" name="email">
                     </div>
                     <div class="hero-form-input">
                         <label for="phoneNumber">Phone Number:</label>
