--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
         </section>
 
         <section id="section-contact">
-            <form class="hero-form" onsubmit="myFunction()">
+            <form class="hero-form" action="#">
                 <div class="hero-form-inputs">
                     <div class="hero-form-input">
                         <label for="fullName">Full name:</label>
-                        <input id="fullName" type="text" name="fullName">
+                        <input id="fullName" type="text" name="fullName" required>
                     </div>
                     <div class="hero-form-input">
                         <label for="email">Email:</label>
-                        <input id="email" type="email" name="email">
+                        <input id="email" type="email" name="email" required>
                     </div>
                     <div class="hero-form-input">
                         <label for="phoneNumber">Phone Number:</label>
-                        <input id="phoneNumber" type="tel" name="phoneNumber">
+                        <input id="phoneNumber" type="tel" name="phoneNumber" required>
                     </div>
                 </div>
                 <div class="form-btn">
