abut me section

--- a/index.html
+++ b/index.html
@@ -82,44 +82,64 @@
             <div class="acards">
                 <div class="acard card1">
                     <h4>company name</h4>
-                    <p>website development</p>
+                    <h6>website development</h6>
                 </div>
                 <div class="acard card2">
                     <h4>company name</h4>
-                    <p>website development</p>
+                    <h6>website development</h6>
                 </div>
                 <div class="acard card3">
                     <h4>company name</h4>
-                    <p>website development</p>
+                    <h6>website development</h6>
                 </div>
                 <div class="acard card4">
                     <h4>company name</h4>
-                    <p>website development</p>
+                    <h6>website development</h6>
                 </div>
                 <div class="acard card5">
                     <h4>company name</h4>
-                    <p>website development</p>
+                    <h6>website development</h6>
                 </div>
                 <div class="acard card6">
                     <h4>company name</h4>
-                    <p>website development</p>
+                    <h6>website development</h6>
                 </div>
                 <div class="acard card7">
                     <h4>company name</h4>
-                    <p>website development</p>
+                    <h6>website development</h6>
                 </div>
                 <div class="acard card8">
                     <h4>company name</h4>
-                    <p>website development</p>
-                </div>
-                <div class="acard card9">
-                    <h4>company name</h4>
-                    <p>website development</p>
+                    <h6>website development</h6>
                 </div>
             </div>
         </section>
 
         <section id="section-about-me">
+            <h2>About Me</h2>
+            <div class="about-me-flex">
+                <div class="about-me-paragraph">
+                    <h3>Daniel</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nisi quis, atque quas minus
+                        magnam, voluptates impedit, quos animi saepe laborum reiciendis accusamus vel mollitia inventore
+                        explicabo id pariatur molestias?</p>
+                    <h6>nision snusdf</h6>
+                </div>
+                <div class="about-me-paragraph">
+                    <h3>Daniel</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus deserunt consectetur illum,
+                        corporis distinctio sequi dignissimos veritatis totam rem saepe illo magnam id voluptates
+                        quaerat voluptatem iste magni corrupti non.</p>
+                    <h6>nision snusdf</h6>
+                </div>
+                <div class="about-me-paragraph">
+                    <h3>Daniel</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, mollitia maiores delectus quam
+                        recusandae enim accusamus aut quod dignissimos. Nihil cum ratione quisquam sit placeat alias
+                        ipsa est dolore quibusdam?</p>
+                    <h6>nision snusdf</h6>
+                </div>
+            </div>
 
         </section>
     </div>
