submit text change

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </section>
 
         <section id="section-contact">
-            <form class="hero-form" action="#">
+            <form class="hero-form" onsubmit="submitContactMe()">
                 <div class="hero-form-inputs">
                     <div class="hero-form-input">
                         <label for="fullName">Full name:</label>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="form-btn">
-                    <button type="submit">Contact Me</button>
+                    <button>Contact Me</button>
                 </div>
             </form>
             <p class="contact-p">Leave your information and I will get back to you as soon as I can! 😃</p>
