--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
         </section>
 
         <section id="section-contact">
-            <form class="hero-form" onsubmit="return submitContactMe(event)">
+            <form class="hero-form" onsubmit="submitContactMe(event)">
                 <div class="hero-form-all-inputs">
                     <div class="hero-form-input">
                         <label for="fullName">Full name:</label>
-                        <input id="fullName" type="text" name="fullName">
+                        <input id="fullName" type="text" name="fullName" minlength="2" maxlength="20" required>
                     </div>
                     <div class="hero-form-input">
                         <label for="email">Email:</label>
-                        <input id="email" type="email" name="email">
+                        <input id="email" type="email" name="email" required>
                     </div>
                     <div class="hero-form-input">
                         <label for="phoneNumber">Phone Number:</label>
-                        <input id="phoneNumber" type="tel" name="phoneNumber">
+                        <input id="phoneNumber" type="tel" name="phoneNumber" minlength="10" maxlength="10">
                     </div>
                 </div>
                 <div class="form-btn">
