--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>Full stack web developer</p>
         </div>
         <div>
-            <p class="welcome"></p>
+            <p class="wellcomeText"></p>
         </div>
         <nav class="nav-bar">
             <a class="nav-link" href="#section-my-work">My Work</a>
