fix footer links tab open

--- a/index.html
+++ b/index.html
@@ -148,13 +148,12 @@
     </div>
     <footer>
         <div class="footer-icons">
-            <a
-                href="https://www.linkedin.com/in/daniel-hen-b08a6a18a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2FnHqtFbMTAeyEb6uqU92xg%3D%3D"><i
-                    class="bi bi-linkedin"></i></a>
-            <a href="https://telegram.me/DanielHen47"><i class="bi bi-telegram"></i></a>
-            <a href="https://wa.me/+972544383565?"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://www.linkedin.com/in/daniel-hen-b08a6a18a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2FnHqtFbMTAeyEb6uqU92xg%3D%3D"
+                target="_blank"><i class="bi bi-linkedin"></i></a>
+            <a href="https://telegram.me/DanielHen47" target="_blank"><i class="bi bi-telegram"></i></a>
+            <a href="https://wa.me/+972544383565?" target="_blank"><i class="bi bi-whatsapp"></i></a>
             <a href="mailto: hen.daniel47@gmail.com"><i class="bi bi-envelope"></i></a>
-            <a href="https://github.com/coilwhine"><i class="bi bi-github"></i></a>
+            <a href="https://github.com/coilwhine" target="_blank"><i class="bi bi-github"></i></a>
         </div>
         <p>© Daniel hen web developer and designer</p>
     </footer>
