--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                         <h1>Daniel.H</h1>
                         <h5>Web developer</h5>
                     </div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus quas, commoditempora.</p>
+                    <p>Creative Full-stack Developer who provides high-impact web
+                        solutions for diverse industry organizations.</p>
                 </div>
                 <div class="hero-img">
                     <img src="img/portrait.jpg" alt="Daniel Hen Portrait">
