--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         solutions for diverse industry organizations.</p>
                 </div>
                 <div class="hero-img">
-                    <img src="img/portrait.jpg" alt="Daniel Hen Portrait">
+                    <img src="img/portrait.jpg" alt="Daniel Hen Portrait" onpointermove="prophesional(event)" onpointerleave="priphesionalNone()">
                 </div>
             </div>
         </section>
@@ -158,7 +158,13 @@
         </div>
         <p>© Daniel hen web developer and designer</p>
     </footer>
+    <div class="hidden">
 
+        <div id="tool-tip">
+            <p>Web Dev</p>
+        </div>
+
+    </div>
     <!-- ---- script ---- -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
