--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                         solutions for diverse industry organizations.</p>
                 </div>
                 <div class="hero-img">
-                    <img src="img/portrait.jpg" alt="Daniel Hen Portrait" onpointermove="prophesional(event)" onpointerleave="priphesionalNone()">
+                    <img src="img/portrait.jpg" alt="Daniel Hen Portrait" onpointermove="prophesional(event)"
+                        onpointerleave="priphesionalNone()">
                 </div>
             </div>
         </section>
@@ -121,30 +122,33 @@
 
         <section id="section-about-me">
             <h2>About Me</h2>
-            <div class="about-me-flex">
-                <div class="about-me-paragraph">
-                    <h3>Daniel</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nisi quis, atque quas minus
-                        magnam, voluptates impedit, quos animi saepe laborum reiciendis accusamus vel mollitia inventore
-                        explicabo id pariatur molestias?</p>
-                    <h6>nision snusdf</h6>
+            <div class="about-me-wraper">
+                <div class="about-me about-me-peregraph">
+                    <h3>Daniel Hen</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla excepturi saepe dolores,
+                        perferendis odio iusto recusandae officia magni sed!</p>
                 </div>
-                <div class="about-me-paragraph">
-                    <h3>Daniel</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus deserunt consectetur illum,
-                        corporis distinctio sequi dignissimos veritatis totam rem saepe illo magnam id voluptates
-                        quaerat voluptatem iste magni corrupti non.</p>
-                    <h6>nision snusdf</h6>
-                </div>
-                <div class="about-me-paragraph">
-                    <h3>Daniel</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, mollitia maiores delectus quam
-                        recusandae enim accusamus aut quod dignissimos. Nihil cum ratione quisquam sit placeat alias
-                        ipsa est dolore quibusdam?</p>
-                    <h6>nision snusdf</h6>
+                <div class="about-me about-me-chart">
+                    <h3>Daniel Hen Chart</h3>
+                    <ul class="chart">
+                        <li class="chart-strip">
+                            <p>HTML</p><span>90%</span>
+                        </li>
+                        <li class="chart-strip">
+                            <p>CSS</p><span>80%</span>
+                        </li>
+                        <li class="chart-strip">
+                            <p>Java Script</p><span>40%</span>
+                        </li>
+                        <li class="chart-strip">
+                            <p>PH1</p><span>20%</span>
+                        </li>
+                        <li class="chart-strip">
+                            <p>PH2</p><span>40%</span>
+                        </li>
+                    </ul>
                 </div>
             </div>
-
         </section>
     </div>
     <footer>
