add finished chart

--- a/index.html
+++ b/index.html
@@ -124,27 +124,35 @@
             <h2>About Me</h2>
             <div class="about-me-wraper">
                 <div class="about-me about-me-peregraph">
-                    <h3>Daniel Hen</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla excepturi saepe dolores,
-                        perferendis odio iusto recusandae officia magni sed!</p>
+                    <h3>who am I?</h3>
+                    <p>I'm a Full-Stack Developer based in Kfar-Saba, Israel.
+                        I love design, an expert on Adobe Photoshop, Lightroom and Illustrator and a part-time
+                        photographer.
+                        I connect all the dots between well-designed architecture and awesome UI.
+                        Drop me a line!</p>
                 </div>
                 <div class="about-me about-me-chart">
-                    <h3>Daniel Hen Chart</h3>
+                    <h3>Profesional Chart</h3>
                     <ul class="chart">
                         <li class="chart-strip">
-                            <p>HTML</p><span>90%</span>
+                            <div class="strip-fill"></div>
+                            <p>HTML</p><span class="strip-span">80%</span>
                         </li>
                         <li class="chart-strip">
-                            <p>CSS</p><span>80%</span>
+                            <div class="strip-fill"></div>
+                            <p>CSS</p><span class="strip-span">70%</span>
                         </li>
                         <li class="chart-strip">
-                            <p>Java Script</p><span>40%</span>
+                            <div class="strip-fill"></div>
+                            <p>Java Script</p><span class="strip-span">40%</span>
                         </li>
                         <li class="chart-strip">
-                            <p>PH1</p><span>20%</span>
+                            <div class="strip-fill"></div>
+                            <p>PHP</p><span class="strip-span">20%</span>
                         </li>
                         <li class="chart-strip">
-                            <p>PH2</p><span>40%</span>
+                            <div class="strip-fill"></div>
+                            <p>Photoshop</p><span class="strip-span">75%</span>
                         </li>
                     </ul>
                 </div>
