--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <h2>About Me</h2>
             <div class="about-me-wraper">
                 <div class="about-me about-me-peregraph">
-                    <h3>who am I?</h3>
+                    <h3>Who am I?</h3>
                     <p>I'm a Full-Stack Developer based in Kfar-Saba, Israel.
                         I love design, an expert on Adobe Photoshop, Lightroom and Illustrator and a part-time
                         photographer.
@@ -132,7 +132,7 @@
                         Drop me a line!</p>
                 </div>
                 <div class="about-me about-me-chart">
-                    <h3>Profesional Chart</h3>
+                    <h3>Profession Chart</h3>
                     <ul class="chart">
                         <li class="chart-strip">
                             <div class="strip-fill"></div>
