--- a/index.html
+++ b/index.html
@@ -86,36 +86,60 @@
             <h2>My Work</h2>
             <div class="acards">
                 <div class="acard card1">
+                    <div class="like-btn card1-like" onclick="likeAction(this)"><i
+                            class="bi bi-hand-thumbs-up-fill"></i></div>
                     <h4>company name</h4>
                     <h6>website development</h6>
+                    <div class="like-counter">321</div>
                 </div>
                 <div class="acard card2">
+                    <div class="like-btn card2-like" onclick="likeAction(this)"><i
+                            class="bi bi-hand-thumbs-up-fill"></i></div>
                     <h4>company name</h4>
                     <h6>website development</h6>
+                    <div class="like-counter">23</div>
                 </div>
                 <div class="acard card3">
+                    <div class="like-btn card3-like" onclick="likeAction(this)"><i
+                            class="bi bi-hand-thumbs-up-fill"></i></div>
                     <h4>company name</h4>
                     <h6>website development</h6>
+                    <div class="like-counter">4421</div>
                 </div>
                 <div class="acard card4">
+                    <div class="like-btn card4-like" onclick="likeAction(this)"><i
+                            class="bi bi-hand-thumbs-up-fill"></i></div>
                     <h4>company name</h4>
                     <h6>website development</h6>
+                    <div class="like-counter">2</div>
                 </div>
                 <div class="acard card5">
+                    <div class="like-btn  card5-like" onclick="likeAction(this)"><i
+                            class="bi bi-hand-thumbs-up-fill"></i></div>
                     <h4>company name</h4>
                     <h6>website development</h6>
+                    <div class="like-counter">33</div>
                 </div>
                 <div class="acard card6">
+                    <div class="like-btn card6-like" onclick="likeAction(this)"><i
+                            class="bi bi-hand-thumbs-up-fill"></i></div>
                     <h4>company name</h4>
                     <h6>website development</h6>
+                    <div class="like-counter">90</div>
                 </div>
                 <div class="acard card7">
+                    <div class="like-btn card7-like" onclick="likeAction(this)"><i
+                            class="bi bi-hand-thumbs-up-fill"></i></div>
                     <h4>company name</h4>
                     <h6>website development</h6>
+                    <div class="like-counter">68</div>
                 </div>
                 <div class="acard card8">
+                    <div class="like-btn card8-like" onclick="likeAction(this)"><i
+                            class="bi bi-hand-thumbs-up-fill"></i></div>
                     <h4>company name</h4>
                     <h6>website development</h6>
+                    <div class="like-counter">28</div>
                 </div>
             </div>
         </section>
@@ -176,6 +200,10 @@
 
         <div id="tool-tip">
             <p>Web Dev</p>
+        </div>
+
+        <div id="goUp" onpointermove="toolTip(event, 'Go Up')" onpointerleave="toolTipNone()">
+            <a href="#section-hero"><i class="bi bi-arrow-up-circle-fill"></i></a>
         </div>
 
     </div>
