--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         </li>
                         <li class="chart-strip" onpointermove="toolTip(event, 'PHP')" onpointerleave="toolTipNone()">
                             <div class="strip-fill"></div>
-                            <p>PHP</p><span class="strip-span">20%</span>
+                            <p>Sex</p><span class="strip-span">20%</span>
                         </li>
                         <li class="chart-strip" onpointermove="toolTip(event, 'Photoshop')"
                             onpointerleave="toolTipNone()">
